# mcp-cms

./: Cargo.toml  README.md
docs/: api-reference.md  api-spec.md  backends.md  comparison.md
example-backend/: .gitignore  Cargo.toml  README.md
example-backend/src/: main.rs
src/: client.rs  main.rs  server.rs
