[package]
name = "mcp-cms"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Content Management MCP Server — articles, social media, YouTube, media library, SEO, publishing workflows for AI agents"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-cms"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "cms", "content", "social-media", "youtube"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
base64 = "0.22"

[workspace]
